--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
         </ul>
       </header>
       <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <h3>Example</h3>
+        <iframe src="example.html" width="400" height="400"></iframe>
+        <br /><br />
+      <a target="_blank" href="example.html">example.html</a>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/poinck">poinck</a></p>
