--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </header>
       <section>
         <h3>Example</h3>
-        <iframe src="example.html" width="400" height="400" border="0"></iframe>
+        <iframe src="example.html" width="400" height="400" style="border: none;"></iframe>
         <br /><br />
       <a target="_blank" href="example.html">example.html</a>
 
